# UnityVRTheremin

./: CMakeLists.txt  addlib.cpp
audioplugin/: CMakeLists.txt  Oscillator.cpp  compile_cmake.sh
audioplugin/NativeAudioPlugins/NativeCode/: Makefile
audioplugin/build-android/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-android/: .ninja_deps  CMakeCache.txt  build.ninja  cmake_install.cmake
theremin_mar11/Assets/: OscillatorScript.cs
theremin_mar11/Assets/Scenes/: SampleScene.unity
theremin_mar11/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
theremin_mar11/Assets/StreamingAssets/: Master.bank  Master.strings.bank
theremin_mar11/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
theremin_mar11/Assets/XR/Settings/: OpenXRPackageSettings.asset
theremin_mar11/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
theremin_mar24/Assets/: AntennaMaterial.mat  AudioTestScript.cs  OscillatorScript.cs  ThereminMaterial.mat
theremin_mar24/Assets/Resources/: OculusRuntimeSettings.asset
theremin_mar24/Assets/Scenes/: SampleScene.unity
theremin_mar24/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
theremin_mar24/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
theremin_mar24/Assets/_Recovery/: 0 (1).unity  0.unity
theremin_mar24/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
theremin_mar24/theremin_mar24_BackUpThisFolder_ButDontShipItWithYourGame/Managed/: UnityLinkerToEditorData.json  analytics.json
waveforms/: generate.py
(+742 files in other folders)
